# GeoCore

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
Backlog/: Deferred.md
Capabilities/: GC-0035 — Destination.md  GC-0036 — Merge PositionHistory into Track.md  GC-0037 — AverageSpeed.md  GC-0038 — Stationary Detection.md  GC-0039-Acceleration.md  GC-0040-Course.md  GC-0041 — NormalizeAngle.md  GC-0042 — NormalizeSignedAngle.md  GC-0043 — AngularDifference Refactor.md  GC-0044 — CourseSeries.md  GC-0045 — CourseAnalysis.md  GC-0046 — CircularMean.md  GC-0047 — CourseAnalysis Mean.md  GC-0048 — CircularRange.md
Demo/: CMakeLists.txt  main.cpp
Documentation/: 1.GettingStarted.md  2.Manifesto.md  3.Design_Principles.md  4.API_Philosophy.md  5.Roadmap.md  6.CapabilityTemplate.md
Documentation/ADR/: ADR-000 - Origin.md  ADR-001 - Vision.md  ADR-002 - Roadmap.md  ADR-003 - Architecture.md  ADR-004 - GeoCore Engine.md  ADR-007 - Engine vs Extensions.md  ADR-008 - Objects vs Algorithms.md  ADR-009 - Course vs Heading Terminology.md  ADR-010 - Observed Motion vs Object Motion.md  ADR-011 - Observation Pipeline.md  ADR-012 - Temporary allocations inside mathematical primitives.md
Documentation/Core Documents/: Modules.md  Vision.md
Documentation/DR/: DR-001 - Vision.md  DR-004 - GeoCore Engine.md  DR-005 - Domain Model.md  DR-006 - Platform Interfaces.md
Engine/: CMakeLists.txt
Engine/Include/GeoCore/: Circle.hpp  Constants.hpp  Decision.hpp  Engine.hpp  Geofencing.hpp  IGeometry.hpp  Movement.hpp  Polygon.hpp  Position.hpp  PositionHistory.hpp  PositionSample.hpp  ProcessingContext.hpp  ProcessingResult.hpp  Rectangle.hpp  Track.hpp  Units.hpp  Version.hpp  WorldState.hpp  Zone.hpp  ZoneMembership.hpp  ZoneTransition.hpp
Engine/Include/GeoCore/Math/: AngularDifference.hpp  Bearing.hpp  CircularMean.hpp  CircularRange.hpp  Constants.hpp  Destination.hpp  Distance.hpp  MathUtils.hpp  Midpoint.hpp  NormalizeAngle.hpp  NormalizeSignedAngle.hpp  Speed.hpp
Engine/Include/GeoCore/Movement/: Acceleration.hpp  Course.hpp  CourseAnalysis.hpp  CourseSeries.hpp  Heading.hpp  Stationary.hpp
Engine/Include/GeoCore/Tracking/: AverageSpeed.hpp  Distance.hpp  Duration.hpp
Engine/Source/: Circle.cpp  Decision.cpp  Engine.cpp  Geofencing.cpp  Polygon.cpp  Position.cpp  PositionHistory.cpp  PositionSample.cpp  ProcessingContext.cpp  ProcessingResult.cpp  Rectangle.cpp  Track.cpp  Units.cpp  Version.cpp  WorldState.cpp  Zone.cpp
Engine/Source/Math/: AngularDifference.cpp  Bearing.cpp  CircularMean.cpp  CircularRange.cpp  Destination.cpp  Distance.cpp  Midpoint.cpp  NormalizeAngle.cpp  NormalizeSignedAngle.cpp  Speed.cpp
Engine/Source/Movement/: Acceleration.cpp  Course.cpp  CourseAnalysis.cpp  CourseSeries.cpp  Heading.cpp  Stationary.cpp
Engine/Source/Tracking/: AverageSpeed.cpp  Distance.cpp  Duration.cpp
Examples/Tracking/: main.cpp
Tests/: CMakeLists.txt  README.md
Tests/Core/: TrackTests.cpp
Tests/Geometry/: CircleTests.cpp  PolygonTests.cpp  RectangleTests.cpp
Tests/Math/: AngularDifferenceTests.cpp  BearingTests.cpp  CircularMeanTests.cpp  CircularRangeTests.cpp  DestinationTests.cpp  DistanceTests.cpp  MidpointTests.cpp  NormalizeAngleTests.cpp  NormalizeSignedAngleTests.cpp  SpeedTests.cpp
Tests/Movement/: AccelerationTests.cpp  CourseAnalysisTests.cpp  CourseSeriesTests.cpp  CourseTests.cpp  StationaryTests.cpp
Tests/Tracking/: AverageSpeedTests.cpp  DurationTests.cpp  TrackingDistanceTests.cpp
